@@ -20,7 +20,12 @@ apport (0.42) UNRELEASED; urgency=low
   * problem_report.py, write_mime(): Make sure that multi-line values that go
     to the summary are terminated with a newline.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 22 Jan 2007 17:42:00 +0100
+  Minor improvements:
+
+  * apport/ui.py: Get the cloakroom ticket number from the
+    X-Launchpad-Blob-Token HTTP header instead of parsing the resulting page.
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 22 Jan 2007 17:52:03 +0100
 
 apport (0.41) feisty; urgency=low
 
